# ChangeLog for dev-perl/Plucene
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Plucene/ChangeLog,v 1.13 2006/07/01 01:07:39 mcummings Exp $

  01 Jul 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.24.ebuild:
  Keywording ~amd64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Plucene-1.24.ebuild:
  Mark 1.24 ~ia64

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild,
  Plucene-1.24.ebuild:
  Virtuals for perl-core

  30 Dec 2005; <mcumming@gentoo.org> Plucene-1.19.ebuild, Plucene-1.24.ebuild:
  Scalar-List-Utils migrated to perl-core. Marking 1.24 stable x86 and sparc.

  05 Aug 2005; David Holm <dholm@gentoo.org> Plucene-1.24.ebuild:
  Added to ~ppc.

*Plucene-1.24 (05 Aug 2005)

  05 Aug 2005; Michael Cummings <mcummings@gentoo.org> +Plucene-1.24.ebuild:
  Version bump upstream

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  dev-perl/Test-Harness => perl-core/Test-Harness migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  dev-perl/Memoize => perl-core/Memoize migration

  17 May 2005; Gustavo Zacarias <gustavoz@gentoo.org> Plucene-1.19.ebuild:
  Stable on sparc

  16 Mar 2005; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  style cleanup

  22 Jan 2005; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  Unmasking for x86

  18 Oct 2004; Michael Cummings <mcummings@gentoo.org> Plucene-1.19.ebuild:
  Corrected deps - sorry about that folks

*Plucene-1.19 (06 Oct 2004)

  06 Oct 2004; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Plucene-1.19.ebuild:
  Plucene - perl port of lucene. This has been tested on both x86 and sparc.
