@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Plucene
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Plucene/ChangeLog,v 1.13 2006/07/01 01:07:39 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Plucene/ChangeLog,v 1.14 2006/07/04 14:52:15 ian Exp $
+
+  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Plucene-1.19.ebuild,
+  Plucene-1.24.ebuild:
+  Fixed RDEPEND wrt bug #134781
 
   01 Jul 2006; Michael Cummings <mcummings@gentoo.org> Plucene-1.24.ebuild:
   Keywording ~amd64
